--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -2,62 +2,48 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Media Queries</title>
-<style>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Gerardino´s ristorante</title>
+<link rel="stylesheet" href="css/style.css">
 
-/********** Base styles **********/
-h1 {
-  margin-bottom: 15px;
-}
-
-p {
-  border: 1px solid black;
-  margin-bottom: 15px;
-}
-#p1 {
-  background-color: #A52A2A;
-  width: 300px;
-  height: 300px;
-}
-#p2 {
-  background-color: #DEB887;
-  width: 50px;
-  height: 50px;
-}
-
-/********** Large devices only **********/
-@media (min-width: 1200px) {
-  #p1 {
-    width: 80%;
-  }
-  #p2 {
-    width: 150px;
-    height: 150px;
-  }
-}
-
-
-/********** Medium devices only **********/
-@media (min-width: 992px) and (max-width: 1199px) {
-  #p1 {
-    width: 50%;
-  }
-  #p2 {
-    width: 100px;
-    height: 100px;
-  }
-  body {
-    background-color: blue;
-  }
-}
-
-</style>
 </head>
 <body>
-<h1>Media Queries</h1>
+<h1>Snack Menu</h1>
 
-<p id="p1"></p>
-<p id="p2"></p>
+
+    <div class="row">
+
+      <div class="col-lg-4 col-md-6 col-sm-12">
+        <div class="box">
+        <section class="food">
+          <p id="p1">Quesadilla </p>
+          </section>
+         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis. </p>
+        </div>
+      </div>
+      
+
+      
+      <div class="col-lg-4 col-md-6 col-sm-12">
+         <div class="box">
+        <section class="food">
+          <p id="p2">Pizza </p>
+          </section>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.</p>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-12 col-sm-12">
+          <div class="box">
+        <section class="food">
+          <p id="p1">Nachos </p>
+          </section>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.</p>
+        </div>
+      </div>
+
+    </div>
 
 </body>
 </html>
